# antichain

./: CHANGELOG.md  Cargo.toml  README.md  roadmap.md
.github/workflows/: ci.yml
benches/: frontier.rs
crates/antichain-intervals/: Cargo.toml  README.md
crates/antichain-intervals/src/: lib.rs
docs/: comparison.md  cookbook.md  faq.md  idea.md  slatedb-multi-writer.md  tutorial.md
examples/: backfill_gaps.rs  progress_protocol.rs  watermark_gossip.rs
proptest-regressions/: lib.txt
specs/: frontier_convergence.fizz
src/: lib.rs
